scripts/tests/errors/err_set_index_non_indexable.bu
// Test: set index on non-indexable type
// Expected: runtime error

var x = 42;
x[0] = 10;
